Fixed alignment

--- a/src/components/project.css
+++ b/src/components/project.css
@@ -141,7 +141,7 @@
         display: contents;
      }
      .project-img{
-        margin-left:25vw;
+        margin-left:27vw;
         width:40vw;
         height:auto;
     }
@@ -152,7 +152,7 @@
     }
     
     .center-btns{
-        margin-left:32vw;
+        margin-left:35vw;
     }
     .center-tech{
         margin-top:2vw;
@@ -171,7 +171,7 @@
         display: contents;
      }
      .project-img{
-        margin-left:25vw;
+        margin-left:26vw;
         width:40vw;
         height:auto;
     }
@@ -182,7 +182,7 @@
     }
     
     .center-btns{
-        margin-left:32vw;
+        margin-left:34vw;
     }
     .center-tech{
         margin-top:2vw;
